--- a/konfigenetes/test_data/resources/var_config.yml
+++ b/konfigenetes/test_data/resources/var_config.yml
@@ -10,3 +10,4 @@ data:
   TEST_VAR_3: 'start text {{ VAR_VALUE }} end text'
   TEST_VAR_4: '{{ VAR_VALUE }} end value'
   TEST_VAR_5: 'start text {{ VAR_VALUE }}'
+  TEST_VAR_6: 'not a variable { VAR_VALUE }'
